--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
 language: php
+
 php:
   - "5.4"
   - "5.3"
+
+before_script:
+  - sudo apt-get install -y libevent-dev
+  - yes "" | pecl install libevent-beta
+  - echo "extension=libevent.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
+  - wget http://getcomposer.org/composer.phar
+  - php composer.phar install
